# ai-api

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .trivyignore  CLAUDE.md  LICENSE  README.md  alembic.ini  pyproject.toml  renovate.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  frontend.yml  image.yml  scheduled-scan.yml
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
alembic/: env.py
alembic/versions/: 0001_init.py  0002_auth_membership.py  0003_hardening.py  0004_usage_billing.py  0005_quota_pool.py  0006_model_catalog.py  0007_member_is_admin.py  0008_token_rotation_audit.py  0009_phase5_multiprovider_schema.py  0010_phase5_audit_events.py  0011_tag_rules.py  0012_self_service.py  0013_responses_api.py  0014_admin_notifications.py  0015_per_device_credentials.py  0016_device_authorizations.py  0017_scoped_credentials.py  0018_model_litellm_sync.py  0019_billing_units.py  0020_cost_quota.py  0021_pool_config.py
deploy/: ROLLBACK.md  dev-postgres.yaml  docker-compose.yml
deploy/catalog/: azure-2026-05.yaml  multiprovider-2026-05.yaml
deploy/docker/: Dockerfile  Dockerfile.frontend  healthcheck.py
deploy/nginx/: default.conf  default.conf.template
deploy/prices/: azure-2026-05.yaml  azure-2026-06-double.yaml
docs/: deployment.md  phase5-multiprovider.md  supply-chain.md
frontend/: .gitignore  README.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx  index.css  main.tsx
knowledge/: .knowie.json  experience.md  principles.md  vision.md
knowledge/design/: admin-notifications.md  admin-visualization.md  frontend.md  model-catalog.md  tag-rollup.md
knowledge/history/: completed-phases-detail.md  lessons-archive.md
specs/001-gateway-core/: data-model.md  plan.md  quickstart-run-notes.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-auth-membership/: data-model.md  plan.md  quickstart-run-notes.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-hardening/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-usage-billing/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-supply-chain/: plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/006-quota-pool/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/007-model-catalog/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/008-frontend-scaffold/: plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/009-member-view/: plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/010-admin-suite/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/012-multi-provider-access/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/013-admin-ux-consolidation/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/014-auto-tag-rules/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/015-self-service-allocation/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/016-price-list-admin/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/017-admin-bootstrap/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/018-member-usage-overview/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/019-allocation-pause-resume/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/020-phase10-ux-polish/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/021-responses-api/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/022-admin-email-notifications/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/023-tag-group-rollup/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/024-admin-visualization/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/025-mobile-rwd/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/026-member-usage-charts/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/028-per-device-credentials/: plan.md  (+5 more)
tests/: _helpers.py  conftest.py
(+657 files in other folders)
