[project]
name = "ai-api"
version = "0.1.0"
description = "AI API Manager — Gateway Core (Phase 1)"
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
    "litellm[proxy]>=1.52.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "alembic>=1.14.0",
    "asyncpg>=0.30.0",
    "aiosqlite>=0.20.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "httpx>=0.27.0",
    "python-ulid>=3.0.0",
    "authlib>=1.3.0",
    "argon2-cffi>=23.1.0",
    "itsdangerous>=2.2.0",
    "email-validator>=2.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "schemathesis>=3.39.0",
    "testcontainers[postgres]>=4.8.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.0",
    "respx>=0.21.0",
    "pyyaml>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_api"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "N", "S", "C4", "PIE", "SIM", "RUF"]
ignore = ["E501", "S101", "B008", "S105", "N818"]  # B008/S105/N818: FastAPI Depends + constants + domain exception names

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S105", "S106", "S603", "S607"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["litellm.*", "testcontainers.*", "schemathesis.*", "authlib.*", "argon2.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: requires Postgres and (optionally) Azure OpenAI",
    "contract: OpenAPI conformance tests",
]
